timeline overlap fix

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -726,7 +726,7 @@ img
   white-space: no-wrap
 
 #noscript
-  margin: 50px auto 0 auto
+  margin: 20px auto 50px auto
   max-width: 400px
   width: 80%
   text-align: center
